   9 Jan 2007; Fabian Groffen <fabian@cwi.nl> :
   Initial autotooled setup